# purl.fyi

./: .gitignore  AUTHORS.rst  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  requirements.txt  setup.cfg
etc/nginx/conf.d/: default.conf
src/: app.py  purl.py  purl_fyi.py
src/templates/: .home.html.swp  home.html
