[metadata]
name = purl.fyi
version = 0.0.1
license = MIT
description = purl2url redirector
author = Hritik Vijay
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Utilities
keywords =
    package
    url
    purl2url
    package url
license_files =
    - LICENSE.txt

[options]
python_requires = >=3.7
packages = find:
package_dir = =src
include_package_data = true
install_requires =
    packageurl-python
    flask

[options.packages.find]
where = src

[options.extras_require]
dev =
    isort
    black

[isort]
force_single_line = True
line_length = 100
