[metadata]
name = purl.fyi
version = 0.0.1
license = MIT
description = purl2url redirector
author = Hritik Vijay
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed
keywords =
    package
    url
    purl2url
    package url
license_files =
    - mit.LICENSE

[options]
python_requires = >=3.7
packages = find:
package_dir = =src
include_package_data = true
zip_safe = false
install_requires =
    packageurl-python

[options.packages.find]
where = src

[options.extras_require]
lint =
    isort
    black
build =
    wheel

[isort]
force_single_line = True
line_length = 100
